adding home page

--- a/ionicSlider/mApp/www/lib/ionic/css/ionic.css
+++ b/ionicSlider/mApp/www/lib/ionic/css/ionic.css
@@ -7736,8 +7736,8 @@ input[type="search"],
 input[type="tel"],
 input[type="color"] {
   display: block;
-  padding-top: 2px;
-  padding-left: 0;
+  /*padding-top: 2px;*/
+  /*padding-left: 0;*/
   height: 34px;
   color: #111;
   vertical-align: middle;
